--- a/elevate/Info.plist
+++ b/elevate/Info.plist
@@ -2,6 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSFaceIDUsageDescription</key>
+	<string>This app uses face tracking.</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>This app requires access to the microphone to capture audio.</string>
+	<key>NSCameraUsageDescription</key>
+	<string>This app requires access to the camera to capture video.</string>
 	<key>CFBundleDocumentTypes</key>
 	<array>
 		<dict>
@@ -19,6 +25,16 @@
 	</array>
 	<key>UTImportedTypeDeclarations</key>
 	<array>
+		<dict>
+			<key>UTTypeConformsTo</key>
+			<array>
+				<string></string>
+			</array>
+			<key>UTTypeIdentifier</key>
+			<string></string>
+			<key>UTTypeTagSpecification</key>
+			<dict/>
+		</dict>
 		<dict>
 			<key>UTTypeConformsTo</key>
 			<array>
